<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Seqaya</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="search">ابحث</string>
    <string name="saved_location">Choose from saved locations</string>
    <string name="cancel">Cancel</string>
    <string name="save_places">Saved addresses</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_title">Choose order delivery time</string>
    <string name="payment_method">Payment method</string>
    <string name="credit_card">Credit card</string>
    <string name="cash_on_delivery">cash on delivery</string>
    <string name="sadad">Sadad</string>
    <string name="transaction_approved">Transaction approved</string>
    <string name="order_items">Order items</string>
    <string name="payment_details">Payment details</string>
    <string name="delivery_location">Delivery location</string>
    <string name="customer_number">Customer number</string>
    <string name="delivery_time">Delivery time</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="delivery">Delivery</string>
    <string name="confirm">Confirm</string>
    <string name="cost">Cost</string>
    <string name="total">Total: </string>
    <string name="quantity">Quantity: </string>
    <string name="bottle_per_package">Bottle / package</string>
    <string name="litre">Litre</string>
    <string name="box">Package</string>
    <string name="rs">R.S</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="password">Password</string>
    <string name="username">User name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="re_password">Re enter password</string>
    <string name="sign_up_with">or login with</string>
    <string name="create_account">Create account</string>
    <string name="pick_date">Choose date</string>
    <string name="pick_time">Choose time</string>
    <string name="please_enter_time_and_date">please enter time and date</string>
    <string name="copyright">© 2018 NTG Clarity</string>
    <string name="sort">Sort by</string>
    <string name="history">Order history</string>
    <string name="order_summary">Order summery</string>
    <string name="loading_indicator_message">loading…</string>
    <string name="in_progress">In progress</string>
    <string name="delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="order_details">Order details</string>
    <string name="order_status">Order status</string>
    <string name="shipment_no">Order no.</string>
    <string name="delivery_date">Delivery date</string>
    <string name="track_order">Track order</string>
    <string name="shipped">Shipped</string>
    <string name="order_date">Order date</string>
    <string name="sign_out">Sign out</string>
    <string name="arabic">ع</string>
    <string name="english">En</string>
    <string name="no_items">No items</string>
    <string name="favourite">Favourite</string>
    <string name="catalog">Catalog</string>
    <string name="settings">Settings</string>
    <string name="no_order_history">No orders</string>
    <string name="no_favs">No favourites</string>
    <string name="facebook_app_id">1726072650786982</string>
    <string name="fb_login_protocol_scheme">fb1726072650786982</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">6pBxN2PGQZ4YkIQaaQ2PvWZRa</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">NWdaHxDZXrFn1BDcgkfQ4HvE0QNlkfNXYPjE1mUhxEaqKFixPg</string>
    <string name="manufacurers">Manufacturers</string>
    <string name="map_loading_message">please wait map loading…</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="change_your_password">Change password</string>
</resources>