<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:text="@string/price"
        android:textSize="16sp"
        android:padding="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottle_size"
        android:text="@string/size"
        android:textSize="16sp"
        android:padding="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottle_per_package"
        android:text="@string/bottle_per_package"
        android:textSize="16sp"
        android:padding="16dp"/>

</LinearLayout>