<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/water"
    tools:context="com.ntg.user.sa2aia.RegistrationActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/registration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundTransparent">

        <EditText
            android:id="@+id/reg_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:gravity="right"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/reg_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/reg_name_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/reg_name_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/reg_name_edit_text" />

        <EditText
            android:id="@+id/reg_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/reg_email_edit_text"
            app:layout_constraintStart_toStartOf="@+id/reg_email_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/reg_email_edit_text" />


        <EditText
            android:id="@+id/reg_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/reg_phone_edit_text"
            app:layout_constraintStart_toStartOf="@+id/reg_phone_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/reg_phone_edit_text" />


        <EditText
            android:id="@+id/reg_rePassword_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/reg_password_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/reg_password_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/reg_password_edit_text" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_corner"
            android:text="@string/register"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/reg_rePassword_edit_text"
            app:layout_constraintStart_toStartOf="@+id/reg_rePassword_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/reg_rePassword_edit_text" />

        <Button
            android:id="@+id/login_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorTransparent"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/registration_button"
            app:layout_constraintStart_toStartOf="@+id/registration_button"
            app:layout_constraintTop_toBottomOf="@+id/registration_button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/copyright"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
