<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.ntg.seqaya.seqayamvpclean.presentation.paymentmethod.CashOnDeliveryFragment">

    <TextView
        android:id="@+id/deliveryLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/delivery_location"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/deliveryLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColor="@color/colorBlack"
        android:gravity="center_horizontal"
        android:text="20 el haram street"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/customer_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorBlack"
        android:text="@string/customer_number"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:textColor="@color/colorBlack"
        android:text="+966358945617"
        android:gravity="center_horizontal"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/confim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:textAllCaps="false"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp" />

</FrameLayout>
