<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_time"
    style="@style/CardStyle"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_dialog_1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_date_range" />

            <TextView
                android:id="@+id/text_date"
                style="@style/timeTitle"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pick_date" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_dialog_2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_access_time" />

            <TextView
                android:id="@+id/text_time"
                style="@style/timeTitle"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pick_time" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_dialog_confirm"
            style="@style/buttonStyle"
            android:layout_gravity="bottom"
            android:text="@string/confirm" />
    </LinearLayout>


</LinearLayout>
