<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardStyle">

    <TextView
        android:id="@+id/ship_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipment_no"
        app:layout_constraintBaseline_toBaselineOf="@+id/order_id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/order_id"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="309487657654"
        app:layout_constraintStart_toEndOf="@+id/ship_no"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/order_date"
        app:layout_constraintStart_toStartOf="@+id/ship_no"
        app:layout_constraintTop_toBottomOf="@+id/ship_no" />

    <TextView
        android:id="@+id/order_date"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="31 ,jun ,2018"
        app:layout_constraintBaseline_toBaselineOf="@+id/order_date_label"
        app:layout_constraintStart_toEndOf="@+id/order_date_label" />

    <TextView
        android:id="@+id/track_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/track_order"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/ship_no"
        app:layout_constraintTop_toBottomOf="@+id/order_date_label" />

    <com.kofigyan.stateprogressbar.StateProgressBar
        android:id="@+id/state_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spb_stateBackgroundColor="#BDBDBF"
        app:spb_stateForegroundColor="@color/colorAccent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/track_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_order"/>

    <TextView
        android:id="@+id/expected_delivery_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/state_progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/state_progress_bar" />

    <TextView
        android:id="@+id/expected_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/expected_delivery_label"
        app:layout_constraintStart_toEndOf="@+id/expected_delivery_label"
        tools:text="sunday 24,8,2019" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expected_delivery" />
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="64dp"
        android:layout_height="72dp"
        android:background="@drawable/water_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />
    <TextView
        android:id="@+id/prod_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="@+id/product_image"
        tools:text="نستلة" />

    <TextView
        android:id="@+id/prod_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/prod_name"
        tools:text="56" />

    <TextView
        android:id="@+id/buttle_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/bpp"
        app:layout_constraintTop_toBottomOf="@+id/bpp"
        tools:text="1.0" />

    <TextView
        android:id="@+id/bpp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/prod_name"
        app:layout_constraintTop_toBottomOf="@+id/prod_name"
        tools:text="12" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/order_details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/order_details"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/order_details_text"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/order_details_text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/litre"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/buttle_size"
        app:layout_constraintStart_toEndOf="@+id/buttle_size"
        app:layout_constraintTop_toTopOf="@+id/buttle_size" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/rs"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/prod_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/prod_price" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorBlack"
        android:text="@string/bottle_per_package"
        app:layout_constraintBottom_toBottomOf="@+id/bpp"
        app:layout_constraintStart_toEndOf="@+id/bpp"
        app:layout_constraintTop_toTopOf="@+id/bpp" />

</android.support.constraint.ConstraintLayout>